--- a/Sample/AndroidManifest.xml
+++ b/Sample/AndroidManifest.xml
@@ -4,14 +4,13 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="21" />
+        android:minSdkVersion="4" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light" >
+        android:theme="@style/AppTheme" >
         
         <activity android:name="org.chenglei.widget.datepicker.Sample.MainActivity">
             <intent-filter>
