--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,13 @@ Sample/.classpath
 Sample/.project
 Sample/.settings/
 Sample/project.properties
-library/.classpath
-library/.project
-library/.settings/
-library/project.properties
+DatePicker/.classpath
+DatePicker/.project
+DatePicker/.settings/
+DatePicker/project.properties
+
+*.iml
+/local.properties
+/.idea
+.DS_Store
+/captures
