--- a/Sample/build.gradle
+++ b/Sample/build.gradle
@@ -6,8 +6,12 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
+
+    defaultConfig {
+        minSdkVersion 9
+    }
 
     sourceSets {
         main {
