--- a/DatePicker/build.gradle
+++ b/DatePicker/build.gradle
@@ -2,12 +2,16 @@ apply plugin: 'com.android.library'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
-	compile 'com.android.support:support-v4:23.1.1'
+	compile 'com.android.support:support-v4:25.1.0'
 }
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
+
+    defaultConfig {
+        minSdkVersion 9
+    }
 
     sourceSets {
         main {
